Added roles to  focusable elements

--- a/index.html
+++ b/index.html
@@ -100,16 +100,16 @@ SOFTWARE.
             <div id="preview-tabbed-pane">
                 <div class="custom-tab-container" id="tab_pane_placeholder">
                     <div class="tab-row">
-                        <div id="custom-tab1" class="custom-tab" tabindex="1">Tab 1</div>
-                        <div id="custom-tab2" class="custom-tab" tabindex="1">Tab 2</div>
-                        <div id="custom-tab3" class="custom-tab" tabindex="1">Tab 3</div>
+                        <div id="custom-tab1" class="custom-tab" role="button" tabindex="0">Tab 1</div>
+                        <div id="custom-tab2" class="custom-tab" role="button" tabindex="0">Tab 2</div>
+                        <div id="custom-tab3" class="custom-tab" role="button" tabindex="0">Tab 3</div>
                     </div>
                     <div class="custom-tab-content-container" id="custom-tab-content-container1">
-                        <div id="custom-tab-content1" class="custom-tab-content" tabindex="1">Tab Content 1</div>
+                        <div id="custom-tab-content1" class="custom-tab-content" role="article" tabindex="0">Tab Content 1</div>
                         <div class="custom-tab-content-container">
-                            <div id="custom-tab-content2" class="custom-tab-content" tabindex="1">Tab Content 2</div>
+                            <div id="custom-tab-content2" class="custom-tab-content" role="article" tabindex="0">Tab Content 2</div>
                             <div class="custom-tab-content-container">
-                                <div id="custom-tab-content3" class="custom-tab-content" tabindex="1">Tab Content 3</div>
+                                <div id="custom-tab-content3" class="custom-tab-content" role="article" tabindex="0">Tab Content 3</div>
                             </div>
                         </div>
                     </div>
